Try fix some sonar code smells.